--- a/bullhorn_cli/Cargo.toml
+++ b/bullhorn_cli/Cargo.toml
@@ -39,3 +39,6 @@ thiserror = "1.0"
 tokio = { version = "1.5.0", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = "0.2"
+
+[dev-dependencies]
+zstd = "0.9"
